base main and gitignore

--- a/hscolortest.cabal
+++ b/hscolortest.cabal
@@ -17,7 +17,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable hscolortest
-  -- main-is:             
+  main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7
