--- a/hscolortest.cabal
+++ b/hscolortest.cabal
@@ -20,6 +20,6 @@ executable hscolortest
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7, terminfo >= 0.4
   -- hs-source-dirs:      
   default-language:    Haskell2010
